Rework and introduce python sinks
